nuevo endpoint servicios por prioridad
